[gd_scene load_steps=16 format=3 uid="uid://birrxtkg5d3hg"]

[ext_resource type="Script" path="res://scripts/environment/moving_camera.gd" id="2_1vd7b"]
[ext_resource type="Texture2D" uid="uid://datqvsx5xph6" path="res://sprites/environment/groundTop.png" id="2_l1lou"]
[ext_resource type="Script" path="res://scripts/environment/effects/scrolling_clouds.gd" id="3_113pp"]
[ext_resource type="Texture2D" uid="uid://b7xoss14ph6pv" path="res://sprites/environment/groundBottom.png" id="3_ku6pw"]
[ext_resource type="Texture2D" uid="uid://pllt5njnknbr" path="res://sprites/environment/clouds.png" id="6_24y6w"]
[ext_resource type="Script" path="res://scripts/systems/building_grid/building_grid.gd" id="8_yumsi"]
[ext_resource type="PackedScene" uid="uid://cmoks1w008liq" path="res://scenes/gameplay/building.tscn" id="9_teedr"]
[ext_resource type="Resource" uid="uid://cbd8qt7xqw4v1" path="res://buildings/city_hall.tres" id="9_vkulm"]
[ext_resource type="LabelSettings" uid="uid://dbpx7v66har17" path="res://theming/non_pixelated_label.tres" id="10_kif8a"]
[ext_resource type="Resource" uid="uid://bh0s6jhfgvuwv" path="res://buildings/apartment.tres" id="10_yj0rj"]
[ext_resource type="FontFile" uid="uid://sxhpegxwj6qy" path="res://fonts/verdana.ttf" id="11_8u3tu"]
[ext_resource type="Script" path="res://scripts/systems/gameplay/world_stats.gd" id="11_fetru"]
[ext_resource type="Script" path="res://scripts/ui/gameplay/stats_label.gd" id="12_q7wy1"]
[ext_resource type="Script" path="res://scripts/systems/gameplay/building_bonuses.gd" id="14_3u7nn"]

[sub_resource type="LabelSettings" id="LabelSettings_7faob"]
font = ExtResource("11_8u3tu")
font_size = 11
font_color = Color(0, 0, 0, 1)

[node name="World" type="Node2D"]

[node name="MovingCamera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
script = ExtResource("2_1vd7b")
speed = 10.0
extent = 100.0
sky_position = Vector2(0, -200)

[node name="Ground" type="Node2D" parent="."]
z_index = 1
position = Vector2(0, 123)

[node name="GroundTop" type="Sprite2D" parent="Ground"]
texture_repeat = 2
texture = ExtResource("2_l1lou")
region_enabled = true
region_rect = Rect2(0, 0, 1024, 8)

[node name="GroundBottom" type="Sprite2D" parent="Ground"]
position = Vector2(0, 100)
texture = ExtResource("3_ku6pw")
region_enabled = true
region_rect = Rect2(0, 0, 1024, 192)

[node name="BackgroundEffects" type="Node2D" parent="."]

[node name="ScrollingClouds" type="Sprite2D" parent="BackgroundEffects"]
z_index = -2
texture_repeat = 2
texture = ExtResource("6_24y6w")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 1000)
script = ExtResource("3_113pp")
drift_x = 12.0
drift_y_amp = 8.0
drift_y_freq = 0.001

[node name="BuildingGrid" type="Node2D" parent="."]
position = Vector2(-140, -160)
script = ExtResource("8_yumsi")
_test_blueprints = Array[Resource("res://scripts/systems/building_grid/building_blueprint.gd")]([ExtResource("10_yj0rj"), ExtResource("9_vkulm")])
_initial_dimensions = Vector2i(14, 14)
building = ExtResource("9_teedr")

[node name="TempUILayer" type="CanvasLayer" parent="."]

[node name="Tutorial" type="Label" parent="TempUILayer"]
offset_left = 182.0
offset_top = 491.0
offset_right = 354.0
offset_bottom = 560.0
text = "Press SPACE to spawn a building
Arrow keys/WASD to move building
Q/E to rotate building
"
label_settings = ExtResource("10_kif8a")

[node name="PixelUILayer" type="CanvasLayer" parent="."]
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 0, 0)

[node name="StatsLabel" type="Label" parent="PixelUILayer" node_paths=PackedStringArray("world_stats")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_right = -480.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Top Label"
label_settings = SubResource("LabelSettings_7faob")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("12_q7wy1")
world_stats = NodePath("../../WorldStats")

[node name="WorldStats" type="Node" parent="." node_paths=PackedStringArray("top_label", "building_bonuses", "building_grid")]
script = ExtResource("11_fetru")
top_label = NodePath("../PixelUILayer/StatsLabel")
building_bonuses = NodePath("../BuildingBonuses")
building_grid = NodePath("../BuildingGrid")

[node name="BuildingBonuses" type="Node" parent="." node_paths=PackedStringArray("building_grid", "world_stats")]
script = ExtResource("14_3u7nn")
building_grid = NodePath("../BuildingGrid")
world_stats = NodePath("../WorldStats")
